# modern-toxic-classifier

./: Cargo.toml
src/: classifier.rs  main.rs
src/model/: config.rs  mod.rs  modern_bert.rs
