[package]
name = "modern-toxic-classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.218"
serde_json = "1.0.140"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
[dependencies.candle-core]
version = "*"
git = "https://github.com/Mnwa/candle.git"
branch = "modernbert-sentency-classifier"

[dependencies.candle-transformers]
version = "*"
git = "https://github.com/Mnwa/candle.git"
branch = "modernbert-sentency-classifier"

[dependencies.candle-nn]
version = "*"
git = "https://github.com/Mnwa/candle.git"
branch = "modernbert-sentency-classifier"
